<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.thilina.treineticpractical.viewmodels.ViewProductViewModel" />

        <variable
            name="product"
            type="com.thilina.treineticpractical.model.Product" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:fitsSystemWindows="false">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="@dimen/size_30dp"
            android:layout_marginEnd="@dimen/padding_16dp"
            app:layout_collapseMode="pin"
            app:title=""
            app:titleTextColor="@color/black">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@color/transparent"
                android:contentDescription="@string/go_back"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/back_icon"
                app:tint="@color/white" />


            <RelativeLayout
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:layout_marginVertical="@dimen/size_8dp"
                android:background="@color/transparent"
                android:minWidth="48dp"
                android:minHeight="48dp"

                >

                <ImageView
                    android:id="@+id/cart_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/cart_svg"
                    app:tint="@color/white" />


                <View
                    android:layout_width="5dp"
                    android:layout_height="5dp"
                    android:layout_alignTop="@+id/cart_icon"
                    android:layout_marginStart="17dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/circle" />


            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>


        <ProgressBar

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/rl_lyt_details"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="@dimen/size_120dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/white"
            android:indeterminateTintMode="src_atop"
            android:progressTint="@color/white"
            android:visibility="@{viewModel.product == null ? View.VISIBLE : View.GONE}" />


        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/imageSlider"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/rl_lyt_details"
            android:layout_below="@+id/toolbar"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"

            android:visibility="@{viewModel.product == null ? View.GONE : View.VISIBLE}"
            app:images="@{viewModel.product}"
            app:layout_collapseMode="parallax" />

        <RelativeLayout
            android:id="@+id/rl_lyt_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_alignParentBottom="true"
            android:background="@drawable/details_view_bg"
            android:paddingHorizontal="@dimen/size_30dp"
            android:paddingVertical="@dimen/size_15dp">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginVertical="@dimen/size_180dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/primary"
                android:indeterminateTintMode="src_atop"

                android:visibility="@{viewModel.product == null ? View.VISIBLE : View.GONE}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:focusableInTouchMode="true"

                android:orientation="vertical"

                android:visibility="@{viewModel.product == null ? View.GONE : View.VISIBLE}">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/size_15dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <View

                        android:layout_width="@dimen/size_70dp"
                        android:layout_height="@dimen/size_5dp"
                        android:background="@drawable/checkout_btn_bg"
                        android:backgroundTint="@color/grey_shade_high" />
                </LinearLayout>

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/size_8dp"
                    android:text="@{viewModel.product.title}"
                    android:textColor="@color/black"

                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.product.price}"

                    android:textAlignment="textEnd"

                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold" />

                <!-- Rating and review count -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/rate_star_1"
                        android:layout_width="@dimen/icon_size_24dp"
                        android:layout_height="@dimen/icon_size_24dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/star_rate" />

                    <ImageView
                        android:id="@+id/rate_star_2"
                        android:layout_width="@dimen/icon_size_24dp"
                        android:layout_height="@dimen/icon_size_24dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/star_rate" />

                    <ImageView
                        android:id="@+id/rate_star_3"
                        android:layout_width="@dimen/icon_size_24dp"
                        android:layout_height="@dimen/icon_size_24dp"
                        android:contentDescription="@string/app_name"

                        android:src="@drawable/star_rate" />

                    <ImageView
                        android:id="@+id/rate_star_4"
                        android:layout_width="@dimen/icon_size_24dp"
                        android:layout_height="@dimen/icon_size_24dp"
                        android:contentDescription="@string/app_name"

                        android:src="@drawable/star_rate" />

                    <ImageView
                        android:id="@+id/rate_star_5"
                        android:layout_width="@dimen/icon_size_24dp"
                        android:layout_height="@dimen/icon_size_24dp"
                        android:contentDescription="@string/app_name"

                        android:src="@drawable/star_rate" />

                    <TextView
                        android:id="@+id/review_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/size_8dp"
                        android:paddingEnd="@dimen/size_8dp"
                        android:text='@{String.format("(%s)", String.valueOf(viewModel.product.rating))}'
                        android:textColor="@color/black"

                        android:textSize="@dimen/text_size_18sp"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/size_8dp"
                        android:paddingEnd="@dimen/size_8dp"
                        android:text="@string/_100_reviews"
                        android:textColor="@color/grey_shade_high_3"


                        android:textSize="@dimen/text_size_15sp" />

                </LinearLayout>
                <!-- Product description -->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:gravity="start"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/product_description"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="5"

                        android:paddingVertical="@dimen/padding_16dp"
                        android:text="@{ viewModel.product.description}"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/product_des_size" />
                </LinearLayout>

                <!-- Icon buttons -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_10dp"
                    android:gravity="clip_horizontal"

                    android:orientation="horizontal"
                    android:weightSum="3">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"

                            android:gravity="center_horizontal|center_vertical"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/icon_bg_circle"

                                android:padding="@dimen/size_5dp"


                                >


                                <ImageButton
                                    android:id="@+id/icon_1"
                                    android:layout_width="@dimen/size_48dp"
                                    android:layout_height="@dimen/size_48dp"
                                    android:background="@color/transparent"
                                    android:contentDescription="@string/btn_two_con_des"
                                    android:src="@drawable/eye_button" />
                            </RelativeLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/prdct_ic_btn_3"
                                android:textColor="@color/black_shade"
                                android:textSize="@dimen/txt_size_icon_button" />


                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"


                            android:gravity="center_horizontal|center_vertical"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/icon_bg_circle"

                                android:padding="@dimen/size_5dp"


                                >

                                <ImageButton
                                    android:id="@+id/btn_bright"
                                    android:layout_width="@dimen/size_48dp"
                                    android:layout_height="@dimen/size_48dp"
                                    android:background="@color/transparent"
                                    android:contentDescription="@string/btn_con_de"
                                    android:src="@drawable/bright_button" />
                            </RelativeLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="@string/prd_ic_btn"
                                android:textAlignment="center"
                                android:textColor="@color/black_shade"
                                android:textSize="@dimen/txt_size_icon_button" />


                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"


                            android:gravity="center"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/icon_bg_circle"

                                android:padding="@dimen/size_5dp"


                                >

                                <ImageButton
                                    android:id="@+id/btn_wifi"
                                    android:layout_width="@dimen/size_48dp"
                                    android:layout_height="@dimen/size_48dp"
                                    android:background="@color/transparent"
                                    android:contentDescription="@string/btn_three_cn_des"
                                    android:src="@drawable/wifi_button" />
                            </RelativeLayout>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"


                                android:text="@string/prd_btn_3"
                                android:textColor="@color/black_shade"
                                android:textSize="@dimen/txt_size_icon_button" />


                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>

                <Button
                    android:id="@+id/checkout_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom"
                    android:layout_marginVertical="@dimen/size_30dp"
                    android:background="@drawable/checkout_btn_bg"
                    android:backgroundTint="@color/black_shade"
                    android:padding="0dp"
                    android:text="@string/checkout_btn"
                    android:textColor="@android:color/white"
                    android:theme="@style/Theme.AppCompat" />


            </LinearLayout>


        </RelativeLayout>


    </RelativeLayout>
</layout>